src/public/sass/layout/_paid-search-header.scss
.ps-masthead {
    @extend %cf;
    background: #fff;
    border-bottom: $masthead-border solid $color-secondary;
    height: $ps-masthead-mobile;
    margin-left: auto;
    margin-right: auto;
    max-width: $page-max-width;
    padding: 0 5%;
    width: 100%;

    &.is-fixed {
        box-shadow: 0 1px 7px 0 rgba(50,50,50,.25);
        left: auto;
        position: fixed;
        right: auto;
        top: 0;
    }

    .masthead__section {
        height: $ps-masthead-mobile;
        width: 100%;

        @include bp($tablet) {
            border-left: 1px solid $color-secondary;
            padding: {
                left: 3%;
                right: 3%;
            }
            float: right;
            height: $ps-masthead-height;
            width: auto;
        }

        &--info {

            .info-wrapper {
                height: $ps-masthead-mobile;

                .dealer-info {
                    float: left;
                    font-family: $font-family-display;

                    .dealer-info__header {
                        font-weight: bold;
                    }

                    @include bp($foundation-small, $tablet) {
                        position: relative;
                        top: 50%;
                        transform: translateY(-50%);
                    }
                    @include bp($mobile-landscape) {
                        font-size: .875em;
                    }
                    @include bp($tablet) {
                        float: none;
                        margin-bottom: 5px;
                    }
                }
                .phone {
                    font-size: 1.25em;

                    .phone-number {

                        .icon-phone {
                            bottom: 1px;
                            height: 18px;
                            line-height: 0;
                            margin-right: .25em;
                            width: 18px;

                            @include bp($foundation-small, $foundation-med) {
                                bottom: 0;
                                height: 25px;
                                margin-right: 0;
                                width: 25px;
                            }
                            @include bp($my-very-large) {
                                height: 20px;
                                width: 20px;
                            }
                        }
                        .number {
                            display: none;

                            @include bp($foundation-med) {
                                display: inline;
                            }
                        }

                        @include bp($foundation-small, $tablet) {
                            display: block;
                        }
                    }

                    @include bp($foundation-small, $tablet) {
                        line-height: 0;
                        position: absolute;
                        top: 50%;
                        transform: translateY(-50%);
                        right: 0;
                    }
                }

                @include bp($tablet) {
                    height: auto;
                    position: relative;
                    top: 50%;
                    transform: translateY(-50%);
                    text-align: right;
                }
            }
        }
        &--velux {
            display: none;

            .velux-logo {
                height: $ps-masthead-height;
            }

            img {
                @extend %vc;
                max-width: 100px;

                @include bp($my-very-large) {
                    max-width: 110px;
                }
            }

            @include bp($tablet) {
                display: block;
                padding-right: 0;
            }
        }
    }

    .ps-branding--desktop {
        display: none;
        height: $ps-masthead-height;
        float: left;
        padding: 1% 0;

        .brand {
            display: inline-block;
            height: 100%;

            img {
                @extend %vc;
                max-height: 200px;
                max-width: 200px;
                width: 100%;
                width: 100%;
            }
        }

        @include bp($tablet) {
            display: block;
        }
    }

    @include bp($tablet) {
        height: $ps-masthead-height;
    }
}

.ps-masthead-wrapper {
    width: 100%;
    z-index: 100;

    .branding{
        background: #fff;
        border-bottom: $masthead-border solid $color-secondary;
        margin-left: auto;
        margin-right: auto;
        padding: 12px 0 10px;
        text-align: center;
        width: 100%;

        .brand {
            display: inline-block;

            img {
                max-height: 200px;
                max-width: 200px;
                width: 100%;
                width: 100%;
            }
        }

        @include bp($tablet) {
            border: 0;
            display: none;
            height: 0;
            margin: 0;
            padding: 0;
        }
    }
}

